Implement L5 voxel occupancy clipmaps